MidnightControls 1.6.0 - Stability, QoL, Cleanup & Compat
- Fixed camera choppiness (especially noticeable on low framerates, closes #38)
- Asset improvements kindly contributed by @spudpiggy
- Button tips now adjust properly to the scaled width of the window (closes #95)
- Make 'Back' binding configurable (closes #93)
- Add config option to disable the button in the controls screen (closes #97)
- Add compatibility with the Inventory Tabs mod (closes #100)
- Improve Emotecraft compatibility
- Add radial menu listing unbound keys (closes #101)
- Fix disabling the HUD not hiding the tips in container screens (closes #104)
- Fix 'Back' button not working correctly
- Fix recipe book not switching tab via shoulder buttons in Crafting Table and Furnace screens
- Support scrolling in Stonecutter

--- a/src/main/resources/assets/midnightcontrols/lang/de_de.json
+++ b/src/main/resources/assets/midnightcontrols/lang/de_de.json
@@ -4,10 +4,11 @@
   "key.midnightcontrols.look_left": "Nach links schauen",
   "key.midnightcontrols.look_right": "Nach rechts schauen",
   "key.midnightcontrols.look_up": "Nach oben schauen",
-  "key.midnightcontrols.ring": "Zeige Steuerungsring",
+  "key.midnightcontrols.ring": "Öffne Ring mit ungebundenen Aktionen",
   "midnightcontrols.action.attack": "Angreifen",
   "midnightcontrols.action.back": "Zurück",
   "midnightcontrols.action.chat": "Chat öffnen",
+  "midnightcontrols.action.controls_ring": "Öffne Ring mit ungebundenen Aktionen",
   "midnightcontrols.action.drop_item": "Item droppen",
   "midnightcontrols.action.exit": "Schließen",
   "midnightcontrols.action.forward": "Vorwärts",
@@ -40,8 +41,6 @@
   "midnightcontrols.action.zoom_in": "Zoom erhöhen",
   "midnightcontrols.action.zoom_out": "Zoom verringern",
   "midnightcontrols.action.zoom_reset": "Zoom zurücksetzen",
-  "midnightcontrols.action.key.emotecraft.fastchoose": "Emote Schnellauswahl",
-  "midnightcontrols.action.key.emotecraft.stop": "Emote stoppen",
   "midnightcontrols.button.left_bumper": "Linke Schultertaste",
   "midnightcontrols.button.right_bumper": "Rechte Schultertaste",
   "midnightcontrols.button.back": "Zurück",
@@ -78,16 +77,11 @@
   "midnightcontrols.controller.mappings.error.write": "Fehler beim Schreiben der Controller Mappings.",
   "midnightcontrols.controller.mappings.updated": "Mappings aktualisiert!",
   "midnightcontrols.controller_type.default": "Standard",
-  "midnightcontrols.controller_type.dualshock": "DualShock",
-  "midnightcontrols.controller_type.switch": "Switch",
-  "midnightcontrols.controller_type.xbox": "Xbox",
-  "midnightcontrols.controller_type.steam": "Steam",
-  "midnightcontrols.controller_type.ouya": "OUYA",
   "midnightcontrols.controls_mode.default": "Tastatur/Maus",
   "midnightcontrols.controls_mode.controller": "Controller",
   "midnightcontrols.controls_mode.touchscreen": "Touchscreen (In Arbeit)",
-  "midnightcontrols.hud_side.left": "links",
-  "midnightcontrols.hud_side.right": "rechts",
+  "midnightcontrols.hud_side.left": "Links",
+  "midnightcontrols.hud_side.right": "Rechts",
   "midnightcontrols.menu.analog_movement": "Analoge Bewegung",
   "midnightcontrols.menu.auto_switch_mode": "Automatischer Wechsel",
   "midnightcontrols.menu.controller": "Controller",
@@ -103,7 +97,7 @@
   "midnightcontrols.menu.invert_right_x_axis": "X rechts umkehren",
   "midnightcontrols.menu.invert_right_y_axis": "Y rechts umkehren",
   "midnightcontrols.menu.keyboard_controls": "Tastatureinstellungen...",
-  "midnightcontrols.menu.left_dead_zone": "Linke tote Zone",
+  "midnightcontrols.menu.left_dead_zone": "Tote Zone des linken Sticks",
   "midnightcontrols.menu.mappings.open_input_str": "Öffne den Controller-Mapping Editor",
   "midnightcontrols.menu.max_left_x_value": "Maximalwert Linke X-Achse",
   "midnightcontrols.menu.max_left_y_value": "Maximalwert Linke Y-Achse",
@@ -113,14 +107,14 @@
   "midnightcontrols.menu.reacharound.horizontal": "Vorderes Blockplatzieren",
   "midnightcontrols.menu.reacharound.vertical": "Vertikales Umgreifen",
   "midnightcontrols.menu.reload_controller_mappings": "Controller-Mappings neuladen",
-  "midnightcontrols.menu.right_dead_zone": "Rechte tote Zone",
+  "midnightcontrols.menu.right_dead_zone": "Tote Zone des rechten Sticks",
   "midnightcontrols.menu.rotation_speed": "Rotationsgeschwindigkeit (X-Achse)",
   "midnightcontrols.menu.y_axis_rotation_speed": "Rotationsgeschwindigkeit (Y-Achse)",
   "midnightcontrols.menu.separator.controller": "Controller",
   "midnightcontrols.menu.separator.general": "Generell",
   "midnightcontrols.menu.title": "MidnightControls - Einstellungen",
   "midnightcontrols.menu.title.controller": "Controlleroptionen",
-  "midnightcontrols.menu.title.controller_controls": "Controller Steuerung",
+  "midnightcontrols.menu.title.controller_controls": "Controller Aktionen",
   "midnightcontrols.menu.title.gameplay": "Gameplay Optionen",
   "midnightcontrols.menu.title.general": "Generelle Optionen",
   "midnightcontrols.menu.title.hud": "HUD Optionen",
