Add controller profiles, Fix HUD issues, Fix Reacharound Outline Color
Addresses #107 and #106

--- a/src/main/resources/assets/midnightcontrols/lang/de_de.json
+++ b/src/main/resources/assets/midnightcontrols/lang/de_de.json
@@ -110,6 +110,7 @@
   "midnightcontrols.menu.right_dead_zone": "Tote Zone des rechten Sticks",
   "midnightcontrols.menu.rotation_speed": "Rotationsgeschwindigkeit (X-Achse)",
   "midnightcontrols.menu.y_axis_rotation_speed": "Rotationsgeschwindigkeit (Y-Achse)",
+  "midnightcontrols.menu.separate_controller_profile": "Separates Controller-Profil",
   "midnightcontrols.menu.separator.controller": "Controller",
   "midnightcontrols.menu.separator.general": "Generell",
   "midnightcontrols.menu.title": "MidnightControls - Einstellungen",
