--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -1,5 +1,24 @@
 {
   "midnightcontrols.midnightconfig.title": "MidnightControls Advanced Config",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_LIGHT": "Default Light",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_DARK": "Default Dark",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_LIGHT": "Second Light",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_DARK": "Second Dark",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DEFAULT": "Default",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DUALSHOCK": "DualShock",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DUALSENSE": "DualSense",
+  "midnightcontrols.midnightconfig.enum.ControllerType.SWITCH": "Switch/Wii Controller",
+  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX": "Xbox One/Series Controller",
+  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX_360": "Xbox 360 Controller",
+  "midnightcontrols.midnightconfig.enum.ControllerType.STEAM_CONTROLLER": "Steam Controller",
+  "midnightcontrols.midnightconfig.enum.ControllerType.STEAM_DECK": "Steam Deck",
+  "midnightcontrols.midnightconfig.enum.ControllerType.OUYA": "OUYA Controller",
+  "midnightcontrols.midnightconfig.enum.ControllerType.NUMBERED": "Numbered Controller",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.DEFAULT": "Keyboard/Mouse",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.CONTROLLER": "Controller",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "Touchscreen (WIP)",
+  "midnightcontrols.midnightconfig.enum.HudSide.LEFT": "Left",
+  "midnightcontrols.midnightconfig.enum.HudSide.RIGHT": "Right",
   "key.midnightcontrols.look_down": "Look down",
   "key.midnightcontrols.look_left": "Look left",
   "key.midnightcontrols.look_right": "Look right",
@@ -99,6 +118,7 @@
   "midnightcontrols.controller_type.steam_controller": "Steam Controller",
   "midnightcontrols.controller_type.steam_deck": "Steam Deck",
   "midnightcontrols.controller_type.ouya": "OUYA Controller",
+  "midnightcontrols.controller_type.numbered": "Numbered Controller",
   "midnightcontrols.controls_mode.default": "Keyboard/Mouse",
   "midnightcontrols.controls_mode.controller": "Controller",
   "midnightcontrols.controls_mode.touchscreen": "Touchscreen (WIP)",
@@ -108,6 +128,8 @@
   "midnightcontrols.menu.auto_switch_mode": "Auto Switch Mode",
   "midnightcontrols.menu.controller": "Controller",
   "midnightcontrols.menu.controller2": "Second Controller",
+  "midnightcontrols.menu.controller_toggle_sneak": "Toggle Sneak on Controller",
+  "midnightcontrols.menu.controller_toggle_sprint": "Toggle Sprint on Controller",
   "midnightcontrols.menu.controller_type": "Controller Type",
   "midnightcontrols.menu.controls_mode": "Mode",
   "midnightcontrols.menu.double_tap_to_sprint": "Double-Tap to Sprint",
