MidnightControls 1.7.2 - Port to 1.19.3, various new options
- Update to 1.19.3 (Tabbing through creative tabs behaves the same as before, that was hard)
- Add an option to move the chat input field to the top of the screen for better input on devices using an on-screen keyboard
- Add an option to make the left joystick behave like a mouse in every screen
- Add a button to more easily access the Advanced Config

--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -140,6 +140,7 @@
   "midnightcontrols.menu.hud_side": "HUD Side",
   "midnightcontrols.menu.invert_right_x_axis": "Invert Right X",
   "midnightcontrols.menu.invert_right_y_axis": "Invert Right Y",
+  "midnightcontrols.menu.joystick_as_mouse": "Always use left stick as mouse",
   "midnightcontrols.menu.keyboard_controls": "Keyboard Controls...",
   "midnightcontrols.menu.left_dead_zone": "Left Stick Dead Zone",
   "midnightcontrols.menu.mappings.open_input_str": "Open Mappings File Editor",
@@ -148,6 +149,7 @@
   "midnightcontrols.menu.max_right_x_value": "Right X Axis Max Value",
   "midnightcontrols.menu.max_right_y_value": "Right Y Axis Max Value",
   "midnightcontrols.menu.mouse_speed": "Mouse Speed",
+  "midnightcontrols.menu.move_chat": "Move chat input box to top",
   "midnightcontrols.menu.reacharound.horizontal": "Front Block Placing",
   "midnightcontrols.menu.reacharound.vertical": "Vertical Reacharound",
   "midnightcontrols.menu.reload_controller_mappings": "Reload Controller Mappings",
@@ -181,12 +183,14 @@
   "midnightcontrols.tooltip.fly_drifting_vertical": "While flying, enables Vanilla vertical drifting/intertia.",
   "midnightcontrols.tooltip.hud_enable": "Toggles the on-screen controller button indicator.",
   "midnightcontrols.tooltip.hud_side": "The position of the HUD.",
+  "midnightcontrols.tooltip.joystick_as_mouse": "Make the joystick behave like a mouse in every menu.",
   "midnightcontrols.tooltip.left_dead_zone": "The dead zone for the controller's left analog stick.",
   "midnightcontrols.tooltip.max_left_x_value": "Changes what the mod considers the highest value for the left X axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.tooltip.max_left_y_value": "Changes what the mod considers the highest value for the left Y axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.tooltip.max_right_x_value": "Changes what the mod considers the highest value for the right X axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.tooltip.max_right_y_value": "Changes what the mod considers the highest value for the right Y axis. Useful if your axis does not use the full range and seems slow.",
   "midnightcontrols.tooltip.mouse_speed": "The controller's emulated mouse speed.",
+  "midnightcontrols.tooltip.move_chat": "Moves the chat input field to the top, for better input on devices with on-screen keyboards.",
   "midnightcontrols.tooltip.reacharound.horizontal": "Enables front block placing, §cmight be considered cheating on some servers§r.",
   "midnightcontrols.tooltip.reacharound.vertical": "Enables vertical reacharound, §cmight be considered cheating on some servers§r.",
   "midnightcontrols.tooltip.reload_controller_mappings": "Reloads the controller mappings file.",
