--- a/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
+++ b/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
@@ -6,7 +6,7 @@
   "key.midnightcontrols.ring": "顯示額外按鍵菜單",
   "midnightcontrols.action.attack": "攻擊",
   "midnightcontrols.action.back": "向後移動",
-  "midnightcontrols.action.chat": "打開聊天室",
+  "midnightcontrols.action.chat": "打開聊天欄",
   "midnightcontrols.action.drop_item": "丟棄所選物品",
   "midnightcontrols.action.exit": "退出",
   "midnightcontrols.action.forward": "向前移動",
@@ -19,14 +19,14 @@
   "midnightcontrols.action.pause_game": "暫停遊戲",
   "midnightcontrols.action.pick_block": "選取方塊",
   "midnightcontrols.action.pickup": "拿取一個/拿取一半",
-  "midnightcontrols.action.pickup_all": "拿取一组/拿取全部",
+  "midnightcontrols.action.pickup_all": "拿取一組/拿取全部",
   "midnightcontrols.action.place": "放置方塊",
   "midnightcontrols.action.player_list": "玩家列表",
   "midnightcontrols.action.quick_move": "快速移動物品",
   "midnightcontrols.action.right": "向右移動",
   "midnightcontrols.action.screenshot": "截圖",
   "midnightcontrols.action.sneak": "潛行",
-  "midnightcontrols.action.sprint": "疾走",
+  "midnightcontrols.action.sprint": "疾跑",
   "midnightcontrols.action.swap_hands": "與副手交換",
   "midnightcontrols.action.toggle_perspective": "切換視角",
   "midnightcontrols.action.toggle_smooth_camera": "切換電影視角",
@@ -54,8 +54,8 @@
   "midnightcontrols.axis.left_y+": "左搖桿上（Y軸正向）",
   "midnightcontrols.axis.right_x+": "右搖桿右（X軸正向）",
   "midnightcontrols.axis.right_y+": "右搖桿上（Y軸正向）",
-  "midnightcontrols.axis.left_trigger": "左板機鍵",
-  "midnightcontrols.axis.right_trigger": "右板機鍵",
+  "midnightcontrols.axis.left_trigger": "左扳機鍵",
+  "midnightcontrols.axis.right_trigger": "右扳機鍵",
   "midnightcontrols.axis.left_x-": "左搖桿左（X軸負向）",
   "midnightcontrols.axis.left_y-": "左搖桿下（Y軸負向）",
   "midnightcontrols.axis.right_x-": "右搖桿左（X軸負向）",
@@ -63,12 +63,12 @@
   "midnightcontrols.button.unknown": "未知（%d）",
   "midnightcontrols.controller.connected": "手把 %d 已連接。",
   "midnightcontrols.controller.disconnected": "手把 %d 已斷開。",
-  "midnightcontrols.controller.mappings.1": "請使用 %s 配置手把對應",
-  "midnightcontrols.controller.mappings.3": "並將對應文件放入此位置：`%s.minecraft/config/gamecontrollerdb.txt%s`。",
-  "midnightcontrols.controller.mappings.error": "發生錯誤，無法讀取對應文件。",
-  "midnightcontrols.controller.mappings.error.write": "發生錯誤，無法保存對應文件。",
-  "midnightcontrols.controller.mappings.updated": "對應已更新！",
-  "midnightcontrols.controller_type.default": "重設",
+  "midnightcontrols.controller.mappings.1": "請使用 %s 配置手把按鍵映射",
+  "midnightcontrols.controller.mappings.3": "並將按鍵映射文件放入此路徑：`%s.minecraft/config/gamecontrollerdb.txt%s`。",
+  "midnightcontrols.controller.mappings.error": "發生錯誤，無法讀取按鍵映射文件。",
+  "midnightcontrols.controller.mappings.error.write": "發生錯誤，無法保存按鍵映射文件。",
+  "midnightcontrols.controller.mappings.updated": "按鍵映射已更新！",
+  "midnightcontrols.controller_type.default": "默認",
   "midnightcontrols.controller_type.dualshock": "DualShock",
   "midnightcontrols.controller_type.switch": "Switch",
   "midnightcontrols.controller_type.xbox": "Xbox",
@@ -92,9 +92,9 @@
   "midnightcontrols.menu.hud_side": "HUD位置",
   "midnightcontrols.menu.invert_right_x_axis": "反轉右搖桿X軸",
   "midnightcontrols.menu.invert_right_y_axis": "反轉右搖桿Y軸",
-  "midnightcontrols.menu.keyboard_controls": "鍵盤控制...",
+  "midnightcontrols.menu.keyboard_controls": "鍵盤控制…",
   "midnightcontrols.menu.left_dead_zone": "左搖桿死區",
-  "midnightcontrols.menu.mappings.open_input_str": "編輯對應文件",
+  "midnightcontrols.menu.mappings.open_input_str": "編輯按鍵映射文件",
   "midnightcontrols.menu.max_left_x_value": "左搖桿X軸最大值識別範圍",
   "midnightcontrols.menu.max_left_y_value": "左搖桿Y軸最大值識別範圍",
   "midnightcontrols.menu.max_right_x_value": "右搖桿X軸最大值識別範圍",
@@ -102,7 +102,7 @@
   "midnightcontrols.menu.mouse_speed": "鼠標移動速度",
   "midnightcontrols.menu.reacharound.horizontal": "水平方向方塊放置輔助",
   "midnightcontrols.menu.reacharound.vertical": "垂直方向方塊放置輔助",
-  "midnightcontrols.menu.reload_controller_mappings": "重新加载手把對應",
+  "midnightcontrols.menu.reload_controller_mappings": "重新加載手把按鍵映射",
   "midnightcontrols.menu.right_dead_zone": "右搖桿死區",
   "midnightcontrols.menu.rotation_speed": "鏡頭旋轉速度 (X)",
   "midnightcontrols.menu.y_axis_rotation_speed": "鏡頭旋轉速度 (Y)",
@@ -111,42 +111,42 @@
   "midnightcontrols.menu.title": "midnightcontrols — 設置",
   "midnightcontrols.menu.title.controller": "手把選項",
   "midnightcontrols.menu.title.controller_controls": "手把控制",
-  "midnightcontrols.menu.title.gameplay": "遊戲内容選項",
+  "midnightcontrols.menu.title.gameplay": "遊戲內容選項",
   "midnightcontrols.menu.title.general": "通用選項",
   "midnightcontrols.menu.title.hud": "HUD選項",
-  "midnightcontrols.menu.title.mappings.string": "編輯對應文件",
+  "midnightcontrols.menu.title.mappings.string": "編輯按鍵映射文件",
   "midnightcontrols.menu.title.visual": "界面選項",
   "midnightcontrols.menu.unfocused_input": "非活動狀態輸入",
   "midnightcontrols.menu.virtual_mouse": "虛擬鼠標",
-  "midnightcontrols.menu.virtual_mouse.skin": "虛擬鼠標指针樣式",
-  "midnightcontrols.narrator.unbound": "取消绑定 %s",
-  "midnightcontrols.not_bound": "未绑定",
+  "midnightcontrols.menu.virtual_mouse.skin": "虛擬鼠標指針樣式",
+  "midnightcontrols.narrator.unbound": "取消綁定 %s",
+  "midnightcontrols.not_bound": "未綁定",
   "midnightcontrols.tooltip.analog_movement": "若遊戲機制允許，則可根據推動搖桿的力度與幅度決定移動的速度。",
   "midnightcontrols.tooltip.auto_switch_mode": "如果已有手把連接，則自動切換為手把操作模式。",
-  "midnightcontrols.tooltip.controller2": "使用額外的手把，比如將一左一右的兩個 Joy-Con 合為一个功能完全的手把。",
+  "midnightcontrols.tooltip.controller2": "使用額外的手把，比如將一左一右的兩個 Joy-Con 合為一個功能完全的手把。",
   "midnightcontrols.tooltip.controller_type": "選擇手把類型，以顯示對應的按鍵圖標。",
   "midnightcontrols.tooltip.controls_mode": "操作模式",
-  "midnightcontrols.tooltip.fast_block_placing": "在創造模式中處於飛行狀態時，可以根據你飛行的速度快速放置方塊。\n§c在部分伺服器可能会被認定為作弊。",
+  "midnightcontrols.tooltip.fast_block_placing": "在創造模式中處於飛行狀態時，可以根據你飛行的速度快速放置方塊。\n§c在部分服務器可能會被認定為作弊。",
   "midnightcontrols.tooltip.fly_drifting": "處於飛行狀態時，啟用原版的水平方向飛行慣性（緩停滑行）。",
   "midnightcontrols.tooltip.fly_drifting_vertical": "處於飛行狀態時，啟用原版的垂直方向飛行慣性（緩停滑行）。",
   "midnightcontrols.tooltip.hud_enable": "顯示手把按鍵操作提示。",
   "midnightcontrols.tooltip.hud_side": "HUD的位置位於畫面的哪一側。",
   "midnightcontrols.tooltip.left_dead_zone": "左搖桿配置的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
-  "midnightcontrols.tooltip.max_left_x_value": "更改左搖桿X軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確認值的情况下，左右移動較為緩慢等问题，本项可能会有所帮助。",
-  "midnightcontrols.tooltip.max_left_y_value": "更改左搖桿Y軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確認值的情况下，前后移動較為緩慢等问题，本项可能会有所帮助。",
-  "midnightcontrols.tooltip.max_right_x_value": "更改右搖桿X軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭左右旋轉較為緩慢等問题，本項可能會有所幫助。",
-  "midnightcontrols.tooltip.max_right_y_value": "更改右搖桿Y軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭上下旋轉較為緩慢等問题，本項可能會有所幫助。",
+  "midnightcontrols.tooltip.max_left_x_value": "更改左搖桿X軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，左右移動較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.tooltip.max_left_y_value": "更改左搖桿Y軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，前後移動較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.tooltip.max_right_x_value": "更改右搖桿X軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭左右旋轉較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.tooltip.max_right_y_value": "更改右搖桿Y軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭上下旋轉較為緩慢等問題，本項可能會有所幫助。",
   "midnightcontrols.tooltip.mouse_speed": "手把模擬的鼠標的移動速度。",
-  "midnightcontrols.tooltip.reacharound.horizontal": "啟用水平方向方塊放置輔助，可在腳下方塊的前方放置方塊。\n§c在部分伺服器可能會被認定為作弊。",
-  "midnightcontrols.tooltip.reacharound.vertical": "啟用垂直方向方塊放置輔助，可在腳下方塊的下方放置方塊。\n§c在部分伺服器可能會被認定為作弊。",
-  "midnightcontrols.tooltip.reload_controller_mappings": "重新加載手把的對應文件。",
+  "midnightcontrols.tooltip.reacharound.horizontal": "啟用水平方向方塊放置輔助，可在腳下方塊的前方放置方塊。\n§c在部分服務器可能會被認定為作弊。",
+  "midnightcontrols.tooltip.reacharound.vertical": "啟用垂直方向方塊放置輔助，可在腳下方塊的下方放置方塊。\n§c在部分服務器可能會被認定為作弊。",
+  "midnightcontrols.tooltip.reload_controller_mappings": "重新加載手把的按鍵映射文件。",
   "midnightcontrols.tooltip.right_dead_zone": "右搖桿配置的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
   "midnightcontrols.tooltip.rotation_speed": "手把操作模式下的鏡頭旋轉速度。(X)",
   "midnightcontrols.tooltip.y_axis_rotation_speed": "手把操作模式下的鏡頭旋轉速度。(Y)",
   "midnightcontrols.tooltip.unfocused_input": "即使遊戲窗口處於非活動狀態，也允許手把進行按鍵輸入。",
-  "midnightcontrols.tooltip.virtual_mouse": "啟用虛擬鼠標，在分屏的情况下很有用。",
-  "midnightcontrols.virtual_mouse.skin.default_light": "預設樣式（白色）",
-  "midnightcontrols.virtual_mouse.skin.default_dark": "預設樣式（黑色）",
+  "midnightcontrols.tooltip.virtual_mouse": "啟用虛擬鼠標，在分屏的情況下很有用。",
+  "midnightcontrols.virtual_mouse.skin.default_light": "默認樣式（白色）",
+  "midnightcontrols.virtual_mouse.skin.default_dark": "默認樣式（黑色）",
   "midnightcontrols.virtual_mouse.skin.second_light": "額外樣式（白色）",
   "midnightcontrols.virtual_mouse.skin.second_dark": "額外樣式（黑色）"
 }
