--- a/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
+++ b/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
@@ -1,40 +1,75 @@
 {
+  "midnightcontrols.midnightconfig.title": "Midnightcontrols 進階設定",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_LIGHT": "預設淺色",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.DEFAULT_DARK": "預設深色",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_LIGHT": "額外淺色",
+  "midnightcontrols.midnightconfig.enum.VirtualMouseSkin.SECOND_DARK": "額外深色",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DEFAULT": "預設",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DUALSHOCK": "DualShock",
+  "midnightcontrols.midnightconfig.enum.ControllerType.DUALSENSE": "DualSense",
+  "midnightcontrols.midnightconfig.enum.ControllerType.SWITCH": "Switch／Wii 手把",
+  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX": "Xbox One／Series 手把",
+  "midnightcontrols.midnightconfig.enum.ControllerType.XBOX_360": "Xbox 360 手把",
+  "midnightcontrols.midnightconfig.enum.ControllerType.STEAM_CONTROLLER": "Steam 手把",
+  "midnightcontrols.midnightconfig.enum.ControllerType.STEAM_DECK": "Steam Deck",
+  "midnightcontrols.midnightconfig.enum.ControllerType.OUYA": "OUYA 手把",
+  "midnightcontrols.midnightconfig.enum.ControllerType.NUMBERED": "Numbered 手把",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.DEFAULT": "鍵盤／滑鼠",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.CONTROLLER": "手把",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "觸控螢幕（製作中）",
+  "midnightcontrols.midnightconfig.enum.HudSide.LEFT": "左",
+  "midnightcontrols.midnightconfig.enum.HudSide.RIGHT": "右",
   "key.midnightcontrols.look_down": "視角下移",
   "key.midnightcontrols.look_left": "視角左移",
   "key.midnightcontrols.look_right": "視角右移",
   "key.midnightcontrols.look_up": "視角上移",
-  "key.midnightcontrols.ring": "顯示額外按鍵菜單",
+  "key.midnightcontrols.ring": "開啟額外按鍵菜單",
   "midnightcontrols.action.attack": "攻擊",
-  "midnightcontrols.action.back": "向後移動",
-  "midnightcontrols.action.chat": "打開聊天欄",
-  "midnightcontrols.action.drop_item": "丟棄所選物品",
-  "midnightcontrols.action.exit": "退出",
+  "midnightcontrols.action.back": "後退",
+  "midnightcontrols.action.chat": "開啟聊天畫面",
+  "midnightcontrols.action.controls_ring": "開啟未綁定",
+  "midnightcontrols.action.debug_screen": "開啟除錯畫面（F3）",
+  "midnightcontrols.action.drop_item": "丟棄已選擇的物品",
+  "midnightcontrols.action.exit": "退出畫面",
   "midnightcontrols.action.forward": "向前移動",
   "midnightcontrols.action.hit": "挖掘",
   "midnightcontrols.action.hotbar_left": "向左循環選擇快捷欄",
   "midnightcontrols.action.hotbar_right": "向右循環選擇快捷欄",
   "midnightcontrols.action.inventory": "物品欄",
   "midnightcontrols.action.jump": "跳躍",
-  "midnightcontrols.action.left": "向左移動",
+  "midnightcontrols.action.left": "往左",
   "midnightcontrols.action.pause_game": "暫停遊戲",
   "midnightcontrols.action.pick_block": "選取方塊",
-  "midnightcontrols.action.pickup": "拿取一個/拿取一半",
-  "midnightcontrols.action.pickup_all": "拿取一組/拿取全部",
+  "midnightcontrols.action.pickup": "拿取一個／拿取一半",
+  "midnightcontrols.action.pickup_all": "拿取一組／拿取全部",
   "midnightcontrols.action.place": "放置方塊",
   "midnightcontrols.action.player_list": "玩家列表",
   "midnightcontrols.action.quick_move": "快速移動物品",
-  "midnightcontrols.action.right": "向右移動",
+  "midnightcontrols.action.right": "往右",
   "midnightcontrols.action.screenshot": "截圖",
+  "midnightcontrols.action.slot_up": "上移物品欄",
+  "midnightcontrols.action.slot_down": "下移物品欄",
+  "midnightcontrols.action.slot_left": "左移物品欄",
+  "midnightcontrols.action.slot_right": "右移物品欄",
   "midnightcontrols.action.sneak": "潛行",
-  "midnightcontrols.action.sprint": "疾跑",
+  "midnightcontrols.action.sprint": "跑步",
   "midnightcontrols.action.swap_hands": "與副手交換",
   "midnightcontrols.action.toggle_perspective": "切換視角",
   "midnightcontrols.action.toggle_smooth_camera": "切換電影視角",
-  "midnightcontrols.action.use": "使用物品/放置方塊",
+  "midnightcontrols.action.page_back": "上一頁",
+  "midnightcontrols.action.page_next": "下一頁",
+  "midnightcontrols.action.tab_back": "上一個頁籤",
+  "midnightcontrols.action.tab_next": "下一個頁籤",
+  "midnightcontrols.action.take": "拿取物品",
+  "midnightcontrols.action.take_all": "拿取全部",
+  "midnightcontrols.action.use": "使用物品／放置方塊",
   "midnightcontrols.action.zoom": "視野縮放",
   "midnightcontrols.action.zoom_in": "縮放時將視野推近",
   "midnightcontrols.action.zoom_out": "縮放時將視野拉遠",
   "midnightcontrols.action.zoom_reset": "縮放時重置縮放距離",
+  "midnightcontrols.action.emi_page_left": "上一頁",
+  "midnightcontrols.action.emi_page_right": "下一頁",
+  "midnightcontrols.category.emi": "EMI",
   "midnightcontrols.button.a": "A",
   "midnightcontrols.button.b": "B",
   "midnightcontrols.button.x": "X",
@@ -50,103 +85,128 @@
   "midnightcontrols.button.dpad_right": "十字鍵右",
   "midnightcontrols.button.dpad_down": "十字鍵下",
   "midnightcontrols.button.dpad_left": "十字鍵左",
-  "midnightcontrols.axis.left_x+": "左搖桿右（X軸正向）",
-  "midnightcontrols.axis.left_y+": "左搖桿上（Y軸正向）",
-  "midnightcontrols.axis.right_x+": "右搖桿右（X軸正向）",
-  "midnightcontrols.axis.right_y+": "右搖桿上（Y軸正向）",
+  "midnightcontrols.button.l4": "L4",
+  "midnightcontrols.button.l5": "L5",
+  "midnightcontrols.button.r4": "R4",
+  "midnightcontrols.button.r5": "L5",
+  "midnightcontrols.axis.left_x+": "左 X+",
+  "midnightcontrols.axis.left_y+": "左搖桿上（Y 軸正向）",
+  "midnightcontrols.axis.right_x+": "右搖桿右（X 軸正向）",
+  "midnightcontrols.axis.right_y+": "右搖桿上（Y 軸正向）",
   "midnightcontrols.axis.left_trigger": "左扳機鍵",
   "midnightcontrols.axis.right_trigger": "右扳機鍵",
-  "midnightcontrols.axis.left_x-": "左搖桿左（X軸負向）",
-  "midnightcontrols.axis.left_y-": "左搖桿下（Y軸負向）",
-  "midnightcontrols.axis.right_x-": "右搖桿左（X軸負向）",
-  "midnightcontrols.axis.right_y-": "右搖桿下（Y軸負向）",
+  "midnightcontrols.axis.left_x-": "左搖桿左（X 軸負向）",
+  "midnightcontrols.axis.left_y-": "左搖桿下（Y 軸負向）",
+  "midnightcontrols.axis.right_x-": "右搖桿左（X 軸負向）",
+  "midnightcontrols.axis.right_y-": "右搖桿下（Y 軸負向）",
   "midnightcontrols.button.unknown": "未知（%d）",
-  "midnightcontrols.controller.connected": "手把 %d 已連接。",
-  "midnightcontrols.controller.disconnected": "手把 %d 已斷開。",
-  "midnightcontrols.controller.mappings.1": "請使用 %s 配置手把按鍵映射",
-  "midnightcontrols.controller.mappings.3": "並將按鍵映射文件放入此路徑：`%s.minecraft/config/gamecontrollerdb.txt%s`。",
+  "midnightcontrols.controller.tutorial.title": "使用手把玩遊戲！",
+  "midnightcontrols.controller.tutorial.description": "前往 %s -> %s -> %s",
+  "midnightcontrols.controller.connected": "搖桿 %d 已連接。",
+  "midnightcontrols.controller.disconnected": "搖桿 %d 已斷開。",
+  "midnightcontrols.controller.mappings.1": "請使用 %s 設定搖桿按鍵映射",
+  "midnightcontrols.controller.mappings.3": "並將按鍵映射文件放入此路徑：「%s.minecraft/config/gamecontrollerdb.txt%s」。",
   "midnightcontrols.controller.mappings.error": "發生錯誤，無法讀取按鍵映射文件。",
   "midnightcontrols.controller.mappings.error.write": "發生錯誤，無法保存按鍵映射文件。",
   "midnightcontrols.controller.mappings.updated": "按鍵映射已更新！",
-  "midnightcontrols.controller_type.default": "默認",
+  "midnightcontrols.controller_type.default": "預設",
   "midnightcontrols.controller_type.dualshock": "DualShock",
-  "midnightcontrols.controller_type.switch": "Switch",
-  "midnightcontrols.controller_type.xbox": "Xbox",
-  "midnightcontrols.controller_type.steam": "Steam",
+  "midnightcontrols.controller_type.dualsense": "DualSense",
+  "midnightcontrols.controller_type.switch": "Switch／Wii 手把",
+  "midnightcontrols.controller_type.xbox": "Xbox One／Series 手把",
+  "midnightcontrols.controller_type.xbox_360": "Xbox 360 手把",
+  "midnightcontrols.controller_type.steam_controller": "Steam 手把",
+  "midnightcontrols.controller_type.steam_deck": "Steam Deck",
   "midnightcontrols.controller_type.ouya": "OUYA",
+  "midnightcontrols.controller_type.numbered": "Numbered 手把",
   "midnightcontrols.controls_mode.default": "鍵鼠",
   "midnightcontrols.controls_mode.controller": "手把",
-  "midnightcontrols.controls_mode.touchscreen": "觸摸屏",
+  "midnightcontrols.controls_mode.touchscreen": "觸控螢幕（製作中）",
   "midnightcontrols.hud_side.left": "左側",
   "midnightcontrols.hud_side.right": "右側",
   "midnightcontrols.menu.analog_movement": "識別搖桿輸入的精確值",
   "midnightcontrols.menu.auto_switch_mode": "自動切換模式",
-  "midnightcontrols.menu.controller": "手把",
-  "midnightcontrols.menu.controller2": "額外手把",
-  "midnightcontrols.menu.controller_type": "手把類型",
+  "midnightcontrols.menu.controller": "搖桿",
+  "midnightcontrols.menu.controller2": "額外搖桿",
+  "midnightcontrols.menu.controller_toggle_sneak": "搖桿潛行切換",
+  "midnightcontrols.menu.controller_toggle_sprint": "搖桿衝刺切換",
+  "midnightcontrols.menu.controller_type": "搖桿類型",
   "midnightcontrols.menu.controls_mode": "模式",
-  "midnightcontrols.menu.fast_block_placing": "方塊快速放置",
+  "midnightcontrols.menu.double_tap_to_sprint": "雙擊以奔跑",
+  "midnightcontrols.menu.fast_block_placing": "快速放置方塊",
   "midnightcontrols.menu.fly_drifting": "水平方向飛行慣性",
   "midnightcontrols.menu.fly_drifting_vertical": "垂直方向飛行慣性",
-  "midnightcontrols.menu.hud_enable": "啟用HUD",
-  "midnightcontrols.menu.hud_side": "HUD位置",
-  "midnightcontrols.menu.invert_right_x_axis": "反轉右搖桿X軸",
-  "midnightcontrols.menu.invert_right_y_axis": "反轉右搖桿Y軸",
-  "midnightcontrols.menu.keyboard_controls": "鍵盤控制…",
+  "midnightcontrols.menu.hud_enable": "啟用 HUD",
+  "midnightcontrols.menu.hud_side": "HUD 位置",
+  "midnightcontrols.menu.invert_right_x_axis": "反轉右搖桿 X 軸",
+  "midnightcontrols.menu.invert_right_y_axis": "反轉右搖桿 Y 軸",
+  "midnightcontrols.menu.joystick_as_mouse": "總是將左搖桿作為滑鼠",
+  "midnightcontrols.menu.keyboard_controls": "鍵盤控制...",
   "midnightcontrols.menu.left_dead_zone": "左搖桿死區",
   "midnightcontrols.menu.mappings.open_input_str": "編輯按鍵映射文件",
-  "midnightcontrols.menu.max_left_x_value": "左搖桿X軸最大值識別範圍",
-  "midnightcontrols.menu.max_left_y_value": "左搖桿Y軸最大值識別範圍",
-  "midnightcontrols.menu.max_right_x_value": "右搖桿X軸最大值識別範圍",
-  "midnightcontrols.menu.max_right_y_value": "右搖桿Y軸最大值識別範圍",
-  "midnightcontrols.menu.mouse_speed": "鼠標移動速度",
+  "midnightcontrols.menu.max_left_x_value": "左搖桿 X 軸最大值識別範圍",
+  "midnightcontrols.menu.max_left_y_value": "左搖桿 Y 軸最大值識別範圍",
+  "midnightcontrols.menu.max_right_x_value": "右搖桿 X 軸最大值識別範圍",
+  "midnightcontrols.menu.max_right_y_value": "右搖桿 Y 軸最大值識別範圍",
+  "midnightcontrols.menu.mouse_speed": "滑鼠指標移動速度",
+  "midnightcontrols.menu.move_chat": "將聊天輸入框移至頂部",
   "midnightcontrols.menu.reacharound.horizontal": "水平方向方塊放置輔助",
   "midnightcontrols.menu.reacharound.vertical": "垂直方向方塊放置輔助",
-  "midnightcontrols.menu.reload_controller_mappings": "重新加載手把按鍵映射",
+  "midnightcontrols.menu.reload_controller_mappings": "重新加載搖桿按鍵映射",
   "midnightcontrols.menu.right_dead_zone": "右搖桿死區",
-  "midnightcontrols.menu.rotation_speed": "鏡頭旋轉速度 (X)",
-  "midnightcontrols.menu.y_axis_rotation_speed": "鏡頭旋轉速度 (Y)",
-  "midnightcontrols.menu.separator.controller": "手把",
-  "midnightcontrols.menu.separator.general": "通用",
-  "midnightcontrols.menu.title": "midnightcontrols — 設置",
-  "midnightcontrols.menu.title.controller": "手把選項",
-  "midnightcontrols.menu.title.controller_controls": "手把控制",
+  "midnightcontrols.menu.rotation_speed": "X 軸鏡頭旋轉速度",
+  "midnightcontrols.menu.y_axis_rotation_speed": "Y 軸鏡頭旋轉速度",
+  "midnightcontrols.menu.separate_controller_profile": "搖桿設定檔",
+  "midnightcontrols.menu.separator.controller": "搖桿",
+  "midnightcontrols.menu.separator.general": "一般",
+  "midnightcontrols.menu.title": "MidnightControls - 設定",
+  "midnightcontrols.menu.title.controller": "搖桿選項",
+  "midnightcontrols.menu.title.controller_controls": "搖桿控制",
   "midnightcontrols.menu.title.gameplay": "遊戲內容選項",
-  "midnightcontrols.menu.title.general": "通用選項",
-  "midnightcontrols.menu.title.hud": "HUD選項",
+  "midnightcontrols.menu.title.general": "一般選項",
+  "midnightcontrols.menu.title.hud": "HUD 選項",
   "midnightcontrols.menu.title.mappings.string": "編輯按鍵映射文件",
   "midnightcontrols.menu.title.visual": "界面選項",
   "midnightcontrols.menu.unfocused_input": "非活動狀態輸入",
-  "midnightcontrols.menu.virtual_mouse": "虛擬鼠標",
-  "midnightcontrols.menu.virtual_mouse.skin": "虛擬鼠標指針樣式",
+  "midnightcontrols.menu.virtual_mouse": "虛擬滑鼠指標",
+  "midnightcontrols.menu.virtual_mouse.ski>n": "虛擬滑鼠指標指針樣式",
   "midnightcontrols.narrator.unbound": "取消綁定 %s",
   "midnightcontrols.not_bound": "未綁定",
   "midnightcontrols.tooltip.analog_movement": "若遊戲機制允許，則可根據推動搖桿的力度與幅度決定移動的速度。",
-  "midnightcontrols.tooltip.auto_switch_mode": "如果已有手把連接，則自動切換為手把操作模式。",
-  "midnightcontrols.tooltip.controller2": "使用額外的手把，比如將一左一右的兩個 Joy-Con 合為一個功能完全的手把。",
-  "midnightcontrols.tooltip.controller_type": "選擇手把類型，以顯示對應的按鍵圖標。",
+  "midnightcontrols.tooltip.auto_switch_mode": "如果已有搖桿連接，則自動切換為搖桿操作模式。",
+  "midnightcontrols.tooltip.controller2": "使用額外的搖桿，例如將左右兩個的 Joy-Con 合為一個功能完全的搖桿。",
+  "midnightcontrols.tooltip.controller_type": "選擇搖桿類型，以顯示對應的按鍵圖標。",
   "midnightcontrols.tooltip.controls_mode": "操作模式",
-  "midnightcontrols.tooltip.fast_block_placing": "在創造模式中處於飛行狀態時，可以根據你飛行的速度快速放置方塊。\n§c在部分服務器可能會被認定為作弊。",
+  "midnightcontrols.tooltip.double_tap_to_sprint": "切換是否啟用向前行走按鍵，快速按兩次走路讓玩家奔跑",
+  "midnightcontrols.tooltip.fast_block_placing": "在創造模式中處於飛行狀態時，可以根據你飛行的速度快速放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
   "midnightcontrols.tooltip.fly_drifting": "處於飛行狀態時，啟用原版的水平方向飛行慣性（緩停滑行）。",
   "midnightcontrols.tooltip.fly_drifting_vertical": "處於飛行狀態時，啟用原版的垂直方向飛行慣性（緩停滑行）。",
-  "midnightcontrols.tooltip.hud_enable": "顯示手把按鍵操作提示。",
-  "midnightcontrols.tooltip.hud_side": "HUD的位置位於畫面的哪一側。",
-  "midnightcontrols.tooltip.left_dead_zone": "左搖桿配置的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
-  "midnightcontrols.tooltip.max_left_x_value": "更改左搖桿X軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，左右移動較為緩慢等問題，本項可能會有所幫助。",
-  "midnightcontrols.tooltip.max_left_y_value": "更改左搖桿Y軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，前後移動較為緩慢等問題，本項可能會有所幫助。",
-  "midnightcontrols.tooltip.max_right_x_value": "更改右搖桿X軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭左右旋轉較為緩慢等問題，本項可能會有所幫助。",
-  "midnightcontrols.tooltip.max_right_y_value": "更改右搖桿Y軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭上下旋轉較為緩慢等問題，本項可能會有所幫助。",
-  "midnightcontrols.tooltip.mouse_speed": "手把模擬的鼠標的移動速度。",
-  "midnightcontrols.tooltip.reacharound.horizontal": "啟用水平方向方塊放置輔助，可在腳下方塊的前方放置方塊。\n§c在部分服務器可能會被認定為作弊。",
-  "midnightcontrols.tooltip.reacharound.vertical": "啟用垂直方向方塊放置輔助，可在腳下方塊的下方放置方塊。\n§c在部分服務器可能會被認定為作弊。",
-  "midnightcontrols.tooltip.reload_controller_mappings": "重新加載手把的按鍵映射文件。",
-  "midnightcontrols.tooltip.right_dead_zone": "右搖桿配置的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
-  "midnightcontrols.tooltip.rotation_speed": "手把操作模式下的鏡頭旋轉速度。(X)",
-  "midnightcontrols.tooltip.y_axis_rotation_speed": "手把操作模式下的鏡頭旋轉速度。(Y)",
-  "midnightcontrols.tooltip.unfocused_input": "即使遊戲窗口處於非活動狀態，也允許手把進行按鍵輸入。",
-  "midnightcontrols.tooltip.virtual_mouse": "啟用虛擬鼠標，在分屏的情況下很有用。",
-  "midnightcontrols.virtual_mouse.skin.default_light": "默認樣式（白色）",
-  "midnightcontrols.virtual_mouse.skin.default_dark": "默認樣式（黑色）",
+  "midnightcontrols.tooltip.hud_enable": "顯示搖桿按鍵操作提示。",
+  "midnightcontrols.tooltip.hud_side": "HUD 的位置位於畫面的哪一側。",
+  "midnightcontrols.tooltip.joystick_as_mouse": "Make the joystick behave like a mouse in every menu.",
+  "midnightcontrols.tooltip.left_dead_zone": "左搖桿設定的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
+  "midnightcontrols.tooltip.max_left_x_value": "更改左搖桿 X 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，左右移動較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.tooltip.max_left_y_value": "更改左搖桿 Y 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，前後移動較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.tooltip.max_right_x_value": "更改右搖桿 X 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭左右旋轉較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.tooltip.max_right_y_value": "更改右搖桿 Y 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致鏡頭上下旋轉較為緩慢等問題，本項可能會有所幫助。",
+  "midnightcontrols.tooltip.mouse_speed": "搖桿模擬的滑鼠指標的移動速度。",
+  "midnightcontrols.tooltip.move_chat": "將聊天輸入欄位移至頂部，以便在使用虛擬鍵盤的裝置上更好地輸入。",
+  "midnightcontrols.tooltip.reacharound.horizontal": "啟用水平方向方塊放置輔助，可在腳下方塊的前方放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
+  "midnightcontrols.tooltip.reacharound.vertical": "啟用垂直方向方塊放置輔助，可在腳下方塊的下方放置方塊。\n§c在部分伺服器可能會被認定為作弊§r。",
+  "midnightcontrols.tooltip.reload_controller_mappings": "重新加載搖桿的按鍵映射文件。",
+  "midnightcontrols.tooltip.right_dead_zone": "右搖桿設定的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
+  "midnightcontrols.tooltip.rotation_speed": "搖桿操作模式下的鏡頭旋轉速度。（X）",
+  "midnightcontrols.tooltip.y_axis_rotation_speed": "搖桿操作模式下的鏡頭旋轉速度。（Y）",
+  "midnightcontrols.tooltip.unfocused_input": "即使遊戲窗口處於非活動狀態，也允許搖桿進行按鍵輸入。",
+  "midnightcontrols.tooltip.virtual_mouse": "啟用虛擬滑鼠指標，在分屏的情況下很有用。",
+  "midnightcontrols.virtual_mouse.skin.default_light": "預設樣式（白色）",
+  "midnightcontrols.virtual_mouse.skin.default_dark": "預設樣式（黑色）",
   "midnightcontrols.virtual_mouse.skin.second_light": "額外樣式（白色）",
-  "midnightcontrols.virtual_mouse.skin.second_dark": "額外樣式（黑色）"
+  "midnightcontrols.virtual_mouse.skin.second_dark": "額外樣式（黑色）",
+  "midnightcontrols.midnightconfig.category.controller": "手把",
+  "midnightcontrols.midnightconfig.category.misc": "雜項",
+  "midnightcontrols.midnightconfig.category.screens": "螢幕",
+  "midnightcontrols.midnightconfig.category.gameplay": "遊戲內容",
+  "midnightcontrols.midnightconfig.category.visual": "界面",
+  "modmenu.descriptionTranslation.midnightcontrols": "增加控制器支援和整體增強控制。\n此版本是從 LambdaControls 分支而來，可惜的是 LambdaControls 已經停止維護。"
 }
