--- a/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
+++ b/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
@@ -16,7 +16,7 @@
   "midnightcontrols.midnightconfig.enum.ControllerType.NUMBERED": "Numbered 手把",
   "midnightcontrols.midnightconfig.enum.ControlsMode.DEFAULT": "鍵盤／滑鼠",
   "midnightcontrols.midnightconfig.enum.ControlsMode.CONTROLLER": "手把",
-  "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "觸控螢幕（製作中）",
+  "midnightcontrols.midnightconfig.enum.ControlsMode.TOUCHSCREEN": "觸控螢幕",
   "midnightcontrols.midnightconfig.enum.HudSide.LEFT": "左",
   "midnightcontrols.midnightconfig.enum.HudSide.RIGHT": "右",
   "key.midnightcontrols.look_down": "視角下移",
@@ -121,7 +121,7 @@
   "midnightcontrols.controller_type.numbered": "Numbered 手把",
   "midnightcontrols.controls_mode.default": "鍵鼠",
   "midnightcontrols.controls_mode.controller": "手把",
-  "midnightcontrols.controls_mode.touchscreen": "觸控螢幕（製作中）",
+  "midnightcontrols.controls_mode.touchscreen": "觸控螢幕",
   "midnightcontrols.hud_side.left": "左側",
   "midnightcontrols.hud_side.right": "右側",
   "midnightcontrols.menu.analog_movement": "識別搖桿輸入的精確值",
