--- a/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
+++ b/src/main/resources/assets/midnightcontrols/lang/zh_tw.json
@@ -152,7 +152,7 @@
   "midnightcontrols.menu.move_chat": "將聊天輸入框移至頂部",
   "midnightcontrols.menu.reacharound.horizontal": "水平方向方塊放置輔助",
   "midnightcontrols.menu.reacharound.vertical": "垂直方向方塊放置輔助",
-  "midnightcontrols.menu.reload_controller_mappings": "重新加載搖桿按鍵映射",
+  "midnightcontrols.menu.reload_controller_mappings": "重新載人搖桿按鍵映射",
   "midnightcontrols.menu.right_dead_zone": "右搖桿死區",
   "midnightcontrols.menu.rotation_speed": "X 軸鏡頭旋轉速度",
   "midnightcontrols.menu.y_axis_rotation_speed": "Y 軸鏡頭旋轉速度",
@@ -169,7 +169,7 @@
   "midnightcontrols.menu.title.visual": "界面選項",
   "midnightcontrols.menu.unfocused_input": "非活動狀態輸入",
   "midnightcontrols.menu.virtual_mouse": "虛擬滑鼠指標",
-  "midnightcontrols.menu.virtual_mouse.ski>n": "虛擬滑鼠指標指針樣式",
+  "midnightcontrols.menu.virtual_mouse.skin": "虛擬滑鼠指標樣式",
   "midnightcontrols.narrator.unbound": "取消綁定 %s",
   "midnightcontrols.not_bound": "未綁定",
   "midnightcontrols.tooltip.analog_movement": "若遊戲機制允許，則可根據推動搖桿的力度與幅度決定移動的速度。",
@@ -183,7 +183,7 @@
   "midnightcontrols.tooltip.fly_drifting_vertical": "處於飛行狀態時，啟用原版的垂直方向飛行慣性（緩停滑行）。",
   "midnightcontrols.tooltip.hud_enable": "顯示搖桿按鍵操作提示。",
   "midnightcontrols.tooltip.hud_side": "HUD 的位置位於畫面的哪一側。",
-  "midnightcontrols.tooltip.joystick_as_mouse": "Make the joystick behave like a mouse in every menu.",
+  "midnightcontrols.tooltip.joystick_as_mouse": "讓 joystick 在每個介面有滑鼠的功能。",
   "midnightcontrols.tooltip.left_dead_zone": "左搖桿設定的死區。\n死區決定搖桿要偏離中心位置多遠才能讓搖桿的輸入有效。",
   "midnightcontrols.tooltip.max_left_x_value": "更改左搖桿 X 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，左右移動較為緩慢等問題，本項可能會有所幫助。",
   "midnightcontrols.tooltip.max_left_y_value": "更改左搖桿 Y 軸最大值的識別範圍。\n若感覺即便推滿搖桿也未達到最大的輸入值，導致在識別搖桿輸入的精確值的情況下，前後移動較為緩慢等問題，本項可能會有所幫助。",
