Eye Tracking Support, Minecraft Without Hands
Add support for eye tracking hardware, eg the Tobii 5.
Add settings to toggle eye tracking in the settings menu.
Add settings to adjust the deadzone while looking at the crosshair.
Disable mouse raw input while eye tracking is in use, as these two modes are not compatible.

--- a/src/main/resources/assets/midnightcontrols/lang/en_us.json
+++ b/src/main/resources/assets/midnightcontrols/lang/en_us.json
@@ -153,6 +153,10 @@
   "midnightcontrols.menu.invert_right_y_axis": "Invert Right Y",
   "midnightcontrols.menu.joystick_as_mouse": "Always use left stick as mouse",
   "midnightcontrols.menu.joystick_as_mouse.tooltip": "Make the joystick behave like a mouse in every menu.",
+  "midnightcontrols.menu.eye_tracker_as_mouse": "Use Eye Tracker as Mouse",
+  "midnightcontrols.menu.eye_tracker_as_mouse.tooltip": "Replace the mouse with an eye tracking device, (for example) the Tobii 5.",
+  "midnightcontrols.menu.eye_tracker_deadzone": "Eye Tracker Deadzone Size",
+  "midnightcontrols.menu.eye_tracker_deadzone.tooltip": "Stops camera movement when looking near the cross hair",
   "midnightcontrols.menu.keyboard_controls": "Keyboard Controls...",
   "midnightcontrols.menu.left_dead_zone": "Left Stick Dead Zone",
   "midnightcontrols.menu.left_dead_zone.tooltip": "The dead zone for the controller's left analog stick.",
